tests/snapshots/integration_test__log_data@551f345e80a277bbe026d29e330c8e9a.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test3.log:15"
expression: result
info: "node=auditdtest.a1959.org type=ADD_GROUP msg=audit(1451781471.602:194894): pid=1321 uid=0 auid=1000 ses=1 subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 msg='op=add-group acct=\"frodo\" exe=\"/usr/sbin/useradd\" hostname=? addr=? terminal=pts/0 res=success'"
---
{
  "record_type": "ADD_GROUP",
  "timestamp": 1451781471602,
  "id": 194894,
  "node": "auditdtest.a1959.org",
  "fields": {
    "auid": 1000,
    "msg": {
      "acct": "frodo",
      "addr": "?",
      "exe": "/usr/sbin/useradd",
      "hostname": "?",
      "op": "add-group",
      "res": "success",
      "terminal": "pts/0"
    },
    "pid": "1321",
    "ses": "1",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "unconfined_r",
      "type": "unconfined_t",
      "user": "unconfined_u"
    },
    "uid": "root"
  }
}
