tests/snapshots/integration_test__log_data@571c632f8d9da9ff935c1b7e7754f0f6.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194439): proctitle=737368643A206275726E205B707269765D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194439,
  "fields": {
    "proctitle": "sshd: burn [priv]"
  }
}
