tests/snapshots/integration_test__log_data@58b36b1593361bca2f8446d9bdfc490d.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-sockaddr-unknown-2.log:1"
expression: result
info: "type=SOCKADDR msg=audit(1709205350.768:2195413): saddr=00000000000000000000000000000000\u001dSADDR=unknown family(0)"
---
{
  "Err": {
    "Parse": "error Eof at:  family(0)"
  }
}
