tests/snapshots/integration_test__log_data@59bf53a7a36c583094b833ab741bee44.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-avc-2.log:1"
expression: result
info: "type=USER_AVC msg=audit(1725042134.780:89813047): pid=1183 uid=81 auid=4294967295 ses=4294967295 subj=system_u:system_r:system_dbusd_t:s0-s0:c0.c1023 msg='avc:  received policyload notice (seqno=96)  exe=\"/usr/bin/dbus-daemon\" sauid=81 hostname=? addr=? terminal=?'\u001dUID=\"dbus\" AUID=\"unset\" SAUID=\"dbus\""
---
{
  "record_type": "USER_AVC",
  "timestamp": 1725042134780,
  "id": 89813047,
  "fields": {
    "auid": null,
    "msg": "avc:  received policyload notice (seqno=96)  exe=\"/usr/bin/dbus-daemon\" sauid=81 hostname=? addr=? terminal=?",
    "pid": "1183",
    "ses": "4294967295",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "system_dbusd_t",
      "user": "system_u"
    },
    "uid": 81
  },
  "enrichment": {
    "AUID": "unset",
    "SAUID": "dbus",
    "UID": "dbus"
  }
}
