tests/snapshots/integration_test__log_data@5be6765c00b0ff4fb9643ed255eb912e.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test3.log:7"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194436): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194436,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "bash"
  }
}
